# nanobind

cmake/: nanobind-config.cmake
include/nanobind/: exception_shim.h  make_iterator.h  nanobind.h  nb_attr.h  nb_cast.h  nb_class.h  nb_defs.h  nb_descr.h  nb_error.h  nb_func.h  nb_lib.h  nb_types.h  typeinfo_shim.h
include/nanobind/eigen/: sparse.h
include/nanobind/stl/: bind_map.h  bind_vector.h  chrono.h  filesystem.h  shared_ptr.h  unique_ptr.h
include/nanobind/stl/detail/: chrono.h
src/: common.cpp  error.cpp  implicit.cpp  nb_enum.cpp  nb_func.cpp  nb_internals.cpp  nb_internals.h  nb_ndarray.cpp  nb_type.cpp
standalone/: CMakeLists.txt
tests/: test_classes.py
